--- a/KnockAndCheckHF/Views/Survey/Enrollment.cshtml
+++ b/KnockAndCheckHF/Views/Survey/Enrollment.cshtml
@@ -3,5 +3,272 @@
     ViewBag.Title = "Enrollment";
 }
 
-<h2>Enrollment</h2>
+<h2>Enrollment Form</h2>
 
+<form action="../Survey/Enroll" method="post">
+    <h3>Basic Information</h3>
+
+    <div class="form-group">
+        <label>Patient ID:</label>
+        <input type="text" class="form-control" name="PID" required />
+    </div>
+
+    <div class="form-group">
+        <label>Patient First Name:</label>
+        <input type="text" class="form-control" name="PFirstName" required />
+    </div>
+
+    <div class="form-group">
+        <label>Patient Last Name:</label>
+        <input type="text" class="form-control" name="PLastName" required />
+    </div>
+
+    <div class="form-group">
+        <label>Date of Birth:</label>
+        <input type="text" class="form-control" name="PDoB" required>
+    </div>
+
+    <div class="form-group">
+        <label>Phone Number:</label>
+        <input type="text" class="form-control" name="PPhoneNumber" required />
+    </div>
+
+    <div class="form-group">
+        <label>Street Address:</label>
+        <input type="text" class="form-control" name="PStreetAddress" required />
+    </div>
+
+    <div class="form-group">
+        <label>City:</label>
+        <input type="text" class="form-control" name="PCity" required>
+    </div>
+
+    <div class="form-group">
+        <label>State:</label>
+        <select name="PState" class="form-control" required>
+            <option value="" selected="selected">Select a State</option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+        </select>
+    </div>
+
+    <div class="form-group">
+        <label>Zip:</label>
+        <input type="text" class="form-control" name="PZip" required />
+    </div>
+
+    <h3>Visit Information</h3>
+    <div class="form-group">
+        <label>Preferred Day:</label>
+        <select name="PPreferredDay" class="form-control" required>
+            <option value="">Select a Day</option>
+            <option value="Monday">Monday</option>
+            <option value="Tuesday">Tuesday</option>
+            <option value="Wednesday">Wednesday</option>
+            <option value="Thursday">Thursday</option>
+            <option value="Friday">Friday</option>
+        </select> 
+    </div>
+
+    <div class="form-group">
+        <label>Prefered Time:</label>
+        <select name="PPreferredTime" class="form-control" required>
+            <option value="">Select a Time</option>
+            <option value="8am-10am">8am-10am</option>
+            <option value="10am-12pm">10am-12pm</option>
+            <option value="12pm-2pm">12pm-2pm</option>
+            <option value="2pm-4pm">2pm-4pm</option>
+            <option value="4pm-6pm">4pm-6pm</option>
+        </select> 
+    </div>
+
+    @*<div class="form-group">
+        <label>Preferred Day: (Only select if they want more than one day a week)</label>
+        <select name="PPreferredDay" class="form-control" required>
+            <option value="null">Select a Day</option>
+            <option value="Monday">Monday</option>
+            <option value="Tuesday">Tuesday</option>
+            <option value="Wednesday">Wednesday</option>
+            <option value="Thursday">Thursday</option>
+            <option value="Friday">Friday</option>
+        </select>
+    </div>
+
+    <div class="form-group">
+        <label>Prefered Time: (Only select if they want more than one day a week)</label>
+        <select name="PPreferredTime" class="form-control" required>
+            <option value="null">Select a Time</option>
+            <option value="8am-10am">8am-10am</option>
+            <option value="10am-12pm">10am-12pm</option>
+            <option value="12pm-2pm">12pm-2pm</option>
+            <option value="2pm-4pm">2pm-4pm</option>
+            <option value="4pm-6pm">4pm-6pm</option>
+        </select>
+    </div>*@
+
+    <div class="form-group">
+        <label>Start Day:</label>
+        <input type="text" class="form-control" name="PStartDay" required />
+    </div>
+
+    <div class="form-group">
+        <label>Start Time:</label>
+        <input type="text" class="form-control" name="PStartTime" required>
+    </div>
+
+    <br />
+
+    <h3>Emergency Contact Information</h3>
+
+    <div class="form-group">
+        <label>First Name:</label>
+        <input type="text" class="form-control" name="EFirstName" required />
+    </div>
+
+    <div class="form-group">
+        <label>Last Name:</label>
+        <input type="text" class="form-control" name="ELastName" required />
+    </div>
+
+    <div class="form-group">
+        <label>Address:</label>
+        <input type="text" class="form-control" name="EAddress" required>
+    </div>
+
+    <div class="form-group">
+        <label>Phone Number:</label>
+        <input type="text" class="form-control" name="EPhoneNumber" required />
+    </div>
+
+    <div class="form-group">
+        <label>City:</label>
+        <input type="text" class="form-control" name="ECity" required>
+    </div>
+
+    <div class="form-group">
+        <label>State:</label>
+        <select name="EState" class="form-control" required>
+            <option value="" selected="selected">Select a State</option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+        </select>
+    </div>
+
+    <div class="form-group">
+        <label>Zip:</label>
+        <input type="text" class="form-control" name="EZip" required />
+    </div>
+
+    <div class="form-group">
+        <label>Relationship:</label>
+        <select name="ERelationship" class="form-control" required>
+            <option value="Mother">Mother</option>
+            <option value="Father">Father</option>
+            <option value="Sibling">Sibling</option>
+            <option value="In-Law">In-Law</option>
+            <option value="Friend">Friend</option>
+            <option value="Spouse/Partner">Spouse/Partner</option>
+            <option value="Other">Other</option>
+        </select>
+    </div>
+
+    <button type="submit" id="submit" class="btn btn-primary">Enroll Patient</button>
+</form>
