--- a/KnockAndCheckHF/Views/Survey/Enrollment.cshtml
+++ b/KnockAndCheckHF/Views/Survey/Enrollment.cshtml
@@ -5,47 +5,47 @@
 
 <h2>Enrollment Form</h2>
 
-<form action="../Survey/Enroll" method="post">
+<form action="../Survey/SaveEnrollment" method="post">
     <h3>Basic Information</h3>
 
     <div class="form-group">
         <label>Patient ID:</label>
-        <input type="text" class="form-control" name="PID" required />
+        <input type="text" class="form-control" name="PatientID" required />
     </div>
 
     <div class="form-group">
         <label>Patient First Name:</label>
-        <input type="text" class="form-control" name="PFirstName" required />
+        <input type="text" class="form-control" name="FirstName" required />
     </div>
 
     <div class="form-group">
         <label>Patient Last Name:</label>
-        <input type="text" class="form-control" name="PLastName" required />
+        <input type="text" class="form-control" name="LastName" required />
     </div>
 
     <div class="form-group">
         <label>Date of Birth:</label>
-        <input type="text" class="form-control" name="PDoB" required>
+        <input type="text" class="form-control" name="DoB" placeholder="MM/DD/YYYY" pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" title="Please enter correct Format MM/DD/YYYY" required />
     </div>
 
     <div class="form-group">
         <label>Phone Number:</label>
-        <input type="text" class="form-control" name="PPhoneNumber" required />
+        <input type="text" class="form-control" name="PhoneNumber" required />
     </div>
 
     <div class="form-group">
         <label>Street Address:</label>
-        <input type="text" class="form-control" name="PStreetAddress" required />
+        <input type="text" class="form-control" name="StreetAddress" required />
     </div>
 
     <div class="form-group">
         <label>City:</label>
-        <input type="text" class="form-control" name="PCity" required>
+        <input type="text" class="form-control" name="City" required>
     </div>
 
     <div class="form-group">
         <label>State:</label>
-        <select name="PState" class="form-control" required>
+        <select name="State" class="form-control" required>
             <option value="" selected="selected">Select a State</option>
             <option value="AL">Alabama</option>
             <option value="AK">Alaska</option>
@@ -103,13 +103,13 @@
 
     <div class="form-group">
         <label>Zip:</label>
-        <input type="text" class="form-control" name="PZip" required />
+        <input type="text" class="form-control" name="Zip" required />
     </div>
 
     <h3>Visit Information</h3>
     <div class="form-group">
         <label>Preferred Day:</label>
-        <select name="PPreferredDay" class="form-control" required>
+        <select name="PrefferedDay" class="form-control" required>
             <option value="">Select a Day</option>
             <option value="Monday">Monday</option>
             <option value="Tuesday">Tuesday</option>
@@ -121,7 +121,7 @@
 
     <div class="form-group">
         <label>Prefered Time:</label>
-        <select name="PPreferredTime" class="form-control" required>
+        <select name="PrefferedTime" class="form-control" required>
             <option value="">Select a Time</option>
             <option value="8am-10am">8am-10am</option>
             <option value="10am-12pm">10am-12pm</option>
@@ -156,13 +156,20 @@
     </div>*@
 
     <div class="form-group">
-        <label>Start Day:</label>
-        <input type="text" class="form-control" name="PStartDay" required />
+        <label>Start Date:</label>
+        <input type="text" class="form-control" name="StartDate" placeholder="MM/DD/YYYY" pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" title="Please enter correct Format MM/DD/YYYY" required />
     </div>
 
     <div class="form-group">
         <label>Start Time:</label>
-        <input type="text" class="form-control" name="PStartTime" required>
+        <select name="StartTime" class="form-control" required>
+            <option value="">Select a Time</option>
+            <option value="8am-10am">8am-10am</option>
+            <option value="10am-12pm">10am-12pm</option>
+            <option value="12pm-2pm">12pm-2pm</option>
+            <option value="2pm-4pm">2pm-4pm</option>
+            <option value="4pm-6pm">4pm-6pm</option>
+        </select> 
     </div>
 
     <br />
@@ -171,32 +178,32 @@
 
     <div class="form-group">
         <label>First Name:</label>
-        <input type="text" class="form-control" name="EFirstName" required />
+        <input type="text" class="form-control" name="EmergencyFirstName" required />
     </div>
 
     <div class="form-group">
         <label>Last Name:</label>
-        <input type="text" class="form-control" name="ELastName" required />
+        <input type="text" class="form-control" name="EmergencyLastName" required />
     </div>
 
     <div class="form-group">
         <label>Address:</label>
-        <input type="text" class="form-control" name="EAddress" required>
+        <input type="text" class="form-control" name="EmergencyAddress" required>
     </div>
 
     <div class="form-group">
         <label>Phone Number:</label>
-        <input type="text" class="form-control" name="EPhoneNumber" required />
+        <input type="text" class="form-control" name="EmergencyPhoneNumber" required />
     </div>
 
     <div class="form-group">
         <label>City:</label>
-        <input type="text" class="form-control" name="ECity" required>
+        <input type="text" class="form-control" name="EmergencyCity" required>
     </div>
 
     <div class="form-group">
         <label>State:</label>
-        <select name="EState" class="form-control" required>
+        <select name="EmergencyState" class="form-control" required>
             <option value="" selected="selected">Select a State</option>
             <option value="AL">Alabama</option>
             <option value="AK">Alaska</option>
@@ -254,12 +261,12 @@
 
     <div class="form-group">
         <label>Zip:</label>
-        <input type="text" class="form-control" name="EZip" required />
+        <input type="text" class="form-control" name="EmergencyZip" required />
     </div>
 
     <div class="form-group">
         <label>Relationship:</label>
-        <select name="ERelationship" class="form-control" required>
+        <select name="EmergencyRelationship" class="form-control" required>
             <option value="Mother">Mother</option>
             <option value="Father">Father</option>
             <option value="Sibling">Sibling</option>
