--- a/KnockAndCheckHF/Views/Survey/WHO5.cshtml
+++ b/KnockAndCheckHF/Views/Survey/WHO5.cshtml
@@ -5,5 +5,67 @@
 
 <h2>WHO-5</h2>
 
-<h3></h3>
+<form action="/Survey/SaveWHO5Form" method="post">
+    <div class="form-group">
+        <label>Patient ID:</label>
+        <select name="PatientID" class="form-control">
+            <option value="null" selected></option>
+            @foreach (string id in ViewBag.Patients)
+            {
+                <option value="@id">@id</option>
+            }
+        </select>
+    </div>
+    <div class="form-group">
+        <label>Date of survey:</label>
+        <input type="text" class="form-control" name="DateOfVisit" placeholder="MM/DD/YYYY" pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" title="Invalid date" />
+    </div>
+    <h3>Please indicate for each of the five statements how you have been feeling over the last two weeks. Notice the higher numbers mean better well-being. Example: If you have felt cheerful and in good spirits more than half of the time over the last two weeks, select the option number 3.</h3><br />
+    <div class="form-group">
+        <label>@ViewBag.Form.Q1</label><br />
+        <input type="radio" name="A1" value="All of the time (5)" /> All of the time (5)<br />
+        <input type="radio" name="A1" value="Most of the time (4)" /> Most of the time (4)<br />
+        <input type="radio" name="A1" value="More than half of the time (3)" /> More than half of the time (3)<br />
+        <input type="radio" name="A1" value="Less than half of the time (2)" /> Less than half of the time (2)<br />
+        <input type="radio" name="A1" value="Some of the time (1)" /> Some of the time (1)<br />
+        <input type="radio" name="A1" value="At no time (0)" /> At no time (0)<br />
+    </div>
+    <div class="form-group">
+        <label>@ViewBag.Form.Q2</label><br />
+        <input type="radio" name="A2" value="All of the time (5)" /> All of the time (5)<br />
+        <input type="radio" name="A2" value="Most of the time (4)" /> Most of the time (4)<br />
+        <input type="radio" name="A2" value="More than half of the time (3)" /> More than half of the time (3)<br />
+        <input type="radio" name="A2" value="Less than half of the time (2)" /> Less than half of the time (2)<br />
+        <input type="radio" name="A2" value="Some of the time (1)" /> Some of the time (1)<br />
+        <input type="radio" name="A2" value="At no time (0)" /> At no time (0)<br />
+    </div>
+    <div class="form-group">
+        <label>@ViewBag.Form.Q3</label><br />
+        <input type="radio" name="A3" value="All of the time (5)" /> All of the time (5)<br />
+        <input type="radio" name="A3" value="Most of the time (4)" /> Most of the time (4)<br />
+        <input type="radio" name="A3" value="More than half of the time (3)" /> More than half of the time (3)<br />
+        <input type="radio" name="A3" value="Less than half of the time (2)" /> Less than half of the time (2)<br />
+        <input type="radio" name="A3" value="Some of the time (1)" /> Some of the time (1)<br />
+        <input type="radio" name="A3" value="At no time (0)" /> At no time (0)<br />
+    </div>
+    <div class="form-group">
+        <label>@ViewBag.Form.Q4</label><br />
+        <input type="radio" name="A4" value="All of the time (5)" /> All of the time (5)<br />
+        <input type="radio" name="A4" value="Most of the time (4)" /> Most of the time (4)<br />
+        <input type="radio" name="A4" value="More than half of the time (3)" /> More than half of the time (3)<br />
+        <input type="radio" name="A4" value="Less than half of the time (2)" /> Less than half of the time (2)<br />
+        <input type="radio" name="A4" value="Some of the time (1)" /> Some of the time (1)<br />
+        <input type="radio" name="A4" value="At no time (0)" /> At no time (0)<br />
+    </div>
+    <div class="form-group">
+        <label>@ViewBag.Form.Q5</label><br />
+        <input type="radio" name="A5" value="All of the time (5)" /> All of the time (5)<br />
+        <input type="radio" name="A5" value="Most of the time (4)" /> Most of the time (4)<br />
+        <input type="radio" name="A5" value="More than half of the time (3)" /> More than half of the time (3)<br />
+        <input type="radio" name="A5" value="Less than half of the time (2)" /> Less than half of the time (2)<br />
+        <input type="radio" name="A5" value="Some of the time (1)" /> Some of the time (1)<br />
+        <input type="radio" name="A5" value="At no time (0)" /> At no time (0)<br />
+    </div>
+    <button type="submit" id="submit" class="btn btn-default">Submit</button>
+</form>
 
