minor formatting change

--- a/KnockAndCheckHF/Views/Survey/DSSI.cshtml
+++ b/KnockAndCheckHF/Views/Survey/DSSI.cshtml
@@ -99,6 +99,6 @@
         <input type="radio" name="A11" value="Somewhat dissatisfied" /> Somewhat dissatisfied<br />
         <input type="radio" name="A11" value="Satisfied" /> Satisfied<br />
     </div><br />
-    <button type="submit" id="submit" class="btn btn-default">Submit</button>
+    <button type="submit" id="submit" class="btn btn-primary">Submit</button>
 </form>
 
