--- a/KnockAndCheckHF/Views/Survey/WHO5.cshtml
+++ b/KnockAndCheckHF/Views/Survey/WHO5.cshtml
@@ -20,7 +20,7 @@
         <label>Date of survey:</label>
         <input type="text" class="form-control" name="DateOfVisit" placeholder="MM/DD/YYYY" pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" title="Invalid date" />
     </div>
-    <h3>Please indicate for each of the five statements how you have been feeling over the last two weeks. Notice the higher numbers mean better well-being. Example: If you have felt cheerful and in good spirits more than half of the time over the last two weeks, select the option number 3.</h3><br />
+    <h4>Please indicate for each of the five statements how you have been feeling over the last two weeks. Notice the higher numbers mean better well-being. Example: If you have felt cheerful and in good spirits more than half of the time over the last two weeks, select the option number 3.</h4><br />
     <div class="form-group">
         <label>@ViewBag.Form.Q1</label><br />
         <input type="radio" name="A1" value="All of the time (5)" /> All of the time (5)<br />
@@ -66,6 +66,6 @@
         <input type="radio" name="A5" value="Some of the time (1)" /> Some of the time (1)<br />
         <input type="radio" name="A5" value="At no time (0)" /> At no time (0)<br />
     </div>
-    <button type="submit" id="submit" class="btn btn-default">Submit</button>
+    <button type="submit" id="submit" class="btn btn-primary">Submit</button>
 </form>
 
