--- a/KnockAndCheckHF/Views/Shared/_Layout.cshtml
+++ b/KnockAndCheckHF/Views/Shared/_Layout.cshtml
@@ -23,8 +23,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Patient Enrollment", "Enrollment", "Survey")</li>
-                    <li>@Html.ActionLink("DSSI", "DSSI", "Survey")</li>
-                    <li>@Html.ActionLink("WHO-5", "WHO5", "Survey")</li>
+                    <li>@Html.ActionLink("6-Month Survey", "DSSI", "Survey")</li>
+                    @*<li>@Html.ActionLink("WHO-5", "WHO5", "Survey")</li>*@
+                    <li>@Html.ActionLink("Weekly Checkup", "CHECKUP", "Survey")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
