--- a/KnockAndCheckHF/Views/Survey/Checkup.cshtml
+++ b/KnockAndCheckHF/Views/Survey/Checkup.cshtml
@@ -5,3 +5,40 @@
 
 <h2>Checkup</h2>
 
+<form action="../Survey/SaveCHECKUPForm" method="post">
+    <div class="form-group">
+        <label>Patient ID:</label>
+        <select name="PatientID" class="form-control">
+            <option value="null" selected></option>
+            @foreach (string id in ViewBag.Patients)
+            {
+                <option value="@id">@id</option>
+            }
+        </select>
+    </div>
+    <div class="form-group">
+        <label>Date of survey:</label>
+        <input type="text" class="form-control" name="DateOfVisit" placeholder="MM/DD/YYYY" pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" title="Invalid date" />
+    </div>
+    <div class="form-group">
+        <label>@ViewBag.Form.Q1</label><br />
+        <input type="text" class="form-control" name="A1" required />
+    </div>
+    <div class="form-group">
+        <label>@ViewBag.Form.Q2</label><br />
+        <input type="text" class="form-control" name="A2" required />
+    </div>
+    <div class="form-group">
+        <label>@ViewBag.Form.Q3</label><br />
+        <input type="text" class="form-control" name="A3" required />
+    </div>
+    <div class="form-group">
+        <label>@ViewBag.Form.Q4</label><br />
+        <input type="text" class="form-control" name="A4" required />
+    </div>
+    <div class="form-group">
+        <label>@ViewBag.Form.Q5</label><br />
+        <input type="text" class="form-control" name="A5" required />
+    </div>
+    <button type="submit" id="submit" class="btn btn-primary">Submit</button>
+</form>
