added Patients View

--- a/KnockAndCheckHF/Views/Shared/_Layout.cshtml
+++ b/KnockAndCheckHF/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("View Patients", "ListPatients", "Home")</li>
                     <li>@Html.ActionLink("Patient Enrollment", "Enrollment", "Survey")</li>
                     <li>@Html.ActionLink("6-Month Survey", "DSSI", "Survey")</li>
                     @*<li>@Html.ActionLink("WHO-5", "WHO5", "Survey")</li>*@
