--- a/KnockAndCheckHF/Views/Survey/Patient.cshtml
+++ b/KnockAndCheckHF/Views/Survey/Patient.cshtml
@@ -53,7 +53,7 @@
                     </div>
                         <div class="col-sm-7 col-xs-6">
                             <b>Case Worker: </b>@survey.Administrator<br />
-                            <b>Form Name: </b>@survey.FormID
+                            <b>Form Name: </b><a href="/Survey/ViewSurvey?SurveyID=@survey.SurveyID">@survey.FormID</a>
                         </div>
                         <div class="clearfix"></div>
                         <div class="bot-border"></div>
