--- a/KnockAndCheckHF/Views/Survey/Checkup.cshtml
+++ b/KnockAndCheckHF/Views/Survey/Checkup.cshtml
@@ -10,9 +10,9 @@
         <label>Patient ID:</label>
         <select name="PatientID" class="form-control">
             <option value="null" selected></option>
-            @foreach (string id in ViewBag.Patients)
+            @foreach (var patient in ViewBag.Patients)
             {
-                <option value="@id">@id</option>
+                <option value="@patient.PatientID">@patient.PatientID</option>
             }
         </select>
     </div>
