--- a/KnockAndCheckHF/Views/Survey/Patient.cshtml
+++ b/KnockAndCheckHF/Views/Survey/Patient.cshtml
@@ -46,7 +46,9 @@
             </div>
             @if (ViewBag.Patient.PrimaryCareGiver == ViewBag.CurrentUser)
             {
-                <br /><a href="/Survey/CHECKUP?PatientID=@ViewBag.Patient.PatientID" class="btn btn-primary">Weekly Checkup Survey</a><a href="/Survey/DSSI?PatientID=@ViewBag.Patient.PatientID" class="btn btn-primary">DSSI / WHO-5</a><br />
+                <br /><a href="../Survey/CHECKUP?PatientID=@ViewBag.Patient.PatientID" class="btn btn-primary">Weekly Checkup Survey</a>
+
+                <a href="../Survey/DSSI?PatientID=@ViewBag.Patient.PatientID" class="btn btn-primary">DSSI / WHO-5</a><br />
             }
             @if (ViewBag.Surveys != null)
             {
