--- a/KnockAndCheckHF/Views/Survey/Checkup.cshtml
+++ b/KnockAndCheckHF/Views/Survey/Checkup.cshtml
@@ -6,30 +6,30 @@
 <h2>Checkup</h2>
 
 <form action="../Survey/SaveCHECKUPForm" method="post">
-    <input type="text" class="form-control" name="PatientID" value="@ViewBag.PatientID" hidden />
+    <input type="text" class="form-control" name="PatientID" value="@ViewBag.PatientID" readonly/>
     <div class="form-group">
         <label>Date of survey:</label>
         <input type="text" class="form-control" name="DateOfVisit" placeholder="MM/DD/YYYY" pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" title="Invalid date" />
     </div>
     <div class="form-group">
         <label>1. @ViewBag.Form.Q1</label><br />
-        <input type="text" class="form-control" name="A1" required />
+        <textarea type="text" class="form-control" name="A1" required ></textarea>
     </div>
     <div class="form-group">
         <label>2. @ViewBag.Form.Q2</label><br />
-        <input type="text" class="form-control" name="A2" required />
+        <textarea type="text" class="form-control" name="A2" required ></textarea>
     </div>
     <div class="form-group">
         <label>3. @ViewBag.Form.Q3</label><br />
-        <input type="text" class="form-control" name="A3" required />
+        <textarea type="text" class="form-control" name="A3" required></textarea>
     </div>
     <div class="form-group">
         <label>4. @ViewBag.Form.Q4</label><br />
-        <input type="text" class="form-control" name="A4" required />
+        <textarea type="text" class="form-control" name="A4" required></textarea> 
     </div>
     <div class="form-group">
         <label>5. @ViewBag.Form.Q5</label><br />
-        <input type="text" class="form-control" name="A5" required />
+        <textarea type="text" class="form-control" name="A5" required></textarea> 
     </div>
     <button type="submit" id="submit" class="btn btn-primary">Submit</button>
 </form>
