--- a/KnockAndCheckHF/Views/Survey/WHO5.cshtml
+++ b/KnockAndCheckHF/Views/Survey/WHO5.cshtml
@@ -6,7 +6,7 @@
 <h2>WHO-5</h2>
 
 <form action="/Survey/SaveWHO5Form" method="post">
-    <input type="text" name="PatientID" value="@ViewBag.PatientID" hidden />
+    <input type="text" name="PatientID" value="@ViewBag.PatientID" readonly/>
     <div class="form-group">
         <label>Date of survey:</label>
         <input type="text" class="form-control" name="DateOfVisit" placeholder="MM/DD/YYYY" pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" title="Invalid date" />
